[package]
name = "westend-bridge"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
repository = "https://github.com/paritytech/parity-bridges-common/"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
hex-literal = "0.4.1"
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["max-encoded-len"] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }


# Bridge dependencies
bp-header-chain 											= { workspace = true }
bp-messages 												= { workspace = true }
bp-parachains 												= { workspace = true }
bp-polkadot-core 											= { workspace = true }
bp-relayers 												= { workspace = true }
bp-runtime 													= { workspace = true }
bp-rococo 													= { workspace = true }
bp-westend 													= { workspace = true }
bp-xcm-bridge-hub 											= { workspace = true }
bp-bridge-hub-rococo 										= { workspace = true }
bp-bridge-hub-westend 										= { workspace = true }
bridge-runtime-common 										= { workspace = true, features = ["integrity-test"] }
westend-runtime 											= { workspace = true }
rococo-runtime 												= { workspace = true }
bridge-hub-westend-runtime 									= { workspace = true }
bridge-hub-rococo-runtime 									= { workspace = true }
asset-hub-rococo-runtime 									= { workspace = true }
asset-hub-westend-runtime 									= { workspace = true }

pallet-bridge-grandpa 										= { workspace = true }
pallet-bridge-messages 										= { workspace = true }
pallet-bridge-parachains 									= { workspace = true }
pallet-bridge-relayers 										= { workspace = true }
pallet-xcm-bridge-hub 										= { workspace = true }
pallet-xcm-bridge-hub-router 								= { workspace = true }


# Substrate Dependencies

sp-consensus-beefy 											= { workspace = true }
frame-benchmarking 											= { workspace = true, optional = true }
frame-executive 											= { workspace = true }
frame-support 												= { workspace = true }
frame-system 												= { workspace = true }
frame-system-rpc-runtime-api 								= { workspace = true }
pallet-aura 												= { workspace = true }
pallet-balances 											= { workspace = true }
pallet-beefy 												= { workspace = true }
pallet-beefy-mmr 											= { workspace = true }
pallet-grandpa 												= { workspace = true }
pallet-mmr 													= { workspace = true }
pallet-session 												= { workspace = true }
pallet-sudo 												= { workspace = true }
pallet-timestamp 											= { workspace = true }
pallet-transaction-payment 									= { workspace = true }
pallet-transaction-payment-rpc-runtime-api 					= { workspace = true }
pallet-utility 												= { workspace = true }
sp-api 														= { workspace = true }
sp-block-builder 											= { workspace = true }
sp-consensus-aura 											= { workspace = true }
sp-core 													= { workspace = true }
sp-inherents 												= { workspace = true }
sp-io 														= { workspace = true }
sp-offchain 												= { workspace = true }
sp-runtime 													= { workspace = true }
sp-session 													= { workspace = true }
sp-std 														= { workspace = true }
sp-transaction-pool 										= { workspace = true }
sp-version 													= { workspace = true }

# Cumulus
parachains-common 											= { workspace = true }
cumulus-pallet-xcmp-queue 									= { workspace = true }
collectives-westend-runtime 								= { workspace = true }

# Local Dependencies
pallet-computational-work 									= { workspace = true }
pallet-check-node-computational-work 						= { workspace = true }

# Polkadot Dependencies
#polkadot-rpc 												= { workspace = true }
pallet-xcm 													= { workspace = true }
xcm 														= { workspace = true }
xcm-builder 												= { workspace = true }
xcm-executor 												= { workspace = true }

[dev-dependencies]
static_assertions = "1.1"
env_logger = "0.10"


[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.8.0", optional = true}

[features]
default = [ "std" ]
std = [
	"frame-benchmarking?/std",
	"bp-header-chain/std",
	"bp-messages/std",
	"bp-parachains/std",
	"bp-polkadot-core/std",
	"bp-relayers/std",
	"bp-runtime/std",
	"bp-rococo/std",
	"bp-westend/std",
	"bp-xcm-bridge-hub/std",
	"bp-bridge-hub-rococo/std",
	"bp-bridge-hub-westend/std",
	"bridge-runtime-common/std",
	"codec/std",
	"parachains-common/std",
	"cumulus-pallet-xcmp-queue/std",
	"collectives-westend-runtime/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-beefy-mmr/std",
	"pallet-beefy/std",
	"pallet-bridge-grandpa/std",
	"pallet-bridge-messages/std",
	"pallet-bridge-parachains/std",
	"pallet-bridge-relayers/std",
	"pallet-check-node-computational-work/std",
	"pallet-computational-work/std",
	"pallet-grandpa/std",
	"pallet-mmr/std",
	"pallet-session/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-utility/std",
	"pallet-xcm/std",
	"pallet-xcm-bridge-hub/std",
	"pallet-xcm-bridge-hub-router/std",
	"scale-info/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-consensus-beefy/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"substrate-wasm-builder",
	"xcm-builder/std",
	"xcm-executor/std",
	"xcm/std",
	"westend-runtime/std",
	"rococo-runtime/std",
	"bridge-hub-westend-runtime/std",
	"bridge-hub-rococo-runtime/std",
	"asset-hub-rococo-runtime/std",
	"asset-hub-westend-runtime/std",
]
runtime-benchmarks = [
#	"asset-hub-rococo-runtime/runtime-benchmarks",
	"bridge-runtime-common/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-bridge-messages/runtime-benchmarks",
	"pallet-bridge-parachains/runtime-benchmarks",
	"pallet-bridge-relayers/runtime-benchmarks",
	"pallet-xcm-bridge-hub-router/runtime-benchmarks",
	"pallet-xcm-bridge-hub/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
]
