[package]
name = "rialto-parachain-collator"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
repository = "https://github.com/paritytech/parity-bridges-common/"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }

[[bin]]
name = 'rialto-parachain-collator'

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }
log = '0.4.20'
codec = { package = 'parity-scale-codec', version = '3.6.5', default-features = false, features = ['derive']}
serde = { version = "1.0", features = ["derive"] }
bs58 = { version = "0.4.0" }
# RPC related Dependencies
jsonrpsee = { version = "0.16.2", features = ["server"] }

# Bridges Dependencies

bp-messages = { git = "https://github.com/lean-apple/dg-bridges-common.git", default-features = false, branch = "ln-global-refresh" }
bridge-runtime-common = { git = "https://github.com/lean-apple/dg-bridges-common.git", branch = "ln-global-refresh", default-features = false }
rialto-parachain-runtime = { path = '../runtime' }

# Substrate Dependencies
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }

pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }

substrate-frame-rpc-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }

## Substrate Client Dependencies
sc-basic-authorship = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
sc-chain-spec = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
sc-cli = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
sc-consensus = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
sc-executor = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
sc-network = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
sc-network-sync = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
sc-rpc = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
sc-rpc-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
sc-service = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false}
sc-telemetry = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
sc-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
sc-tracing = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }

## Substrate Primitive Dependencies
sp-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
sp-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
sp-keystore = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sp-offchain = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sp-session = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sp-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sp-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }

# Cumulus dependencies
cumulus-client-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
cumulus-client-consensus-common = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
cumulus-client-cli = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
cumulus-client-network = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
cumulus-client-service = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
cumulus-primitives-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
cumulus-relay-chain-interface = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }

# Polkadot dependencies
polkadot-cli = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
polkadot-service = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
xcm = { package = "staging-xcm", git = "https://github.com/paritytech/polkadot-sdk", branch = "master",default-features = false }

[features]
std = [ "sp-api/std", "sp-runtime/std" ]
runtime-benchmarks = [ 'rialto-parachain-runtime/runtime-benchmarks' ]
