[package]
name = "pallet-computational-work"
version = "0.1.0"
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["max-encoded-len"] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }

frame-benchmarking = { workspace = true }
frame-support = {   workspace = true }
frame-system = {   workspace = true }
sp-core = {   workspace = true }
sp-runtime = {  workspace = true }
sp-io = {   workspace = true }

[dev-dependencies]
frame-support-test = {  git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.8.0" }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
]
runtime-benchmarks = [ "frame-benchmarking/runtime-benchmarks" ]
try-runtime = [ "frame-support/try-runtime" ]
