[package]
name = "pallet-random-node-selector"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-ganu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
frame-benchmarking = {   default-features = false, optional = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
frame-support = {   default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
frame-system = {   default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sp-core = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }

[dev-dependencies]
sp-io = {   default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
frame-support-test = {  git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
pallet-insecure-randomness-collective-flip  = {  git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]

