[package]
name = "pallet-random-node-selector"
version = "0.1.0"
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.5", default-features = false, features = ["derive"] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
frame-benchmarking = {   default-features = false, optional = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
frame-support = {   default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
frame-system = {   default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sp-core = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sp-io = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }

[dev-dependencies]
frame-support-test = {  git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
pallet-insecure-randomness-collective-flip  = {  git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
]
runtime-benchmarks = [ "frame-benchmarking/runtime-benchmarks" ]
try-runtime = [ "frame-support/try-runtime" ]

